[gd_scene load_steps=14 format=3 uid="uid://b84rrwwmrt6wq"]

[ext_resource type="Script" path="res://scenes/rooms/answer_display.gd" id="1_6spgj"]
[ext_resource type="Theme" uid="uid://cpendnc1jo8it" path="res://assets/theme.tres" id="1_la7yq"]
[ext_resource type="Texture2D" uid="uid://qtirilhomnmi" path="res://assets/dodome2.png" id="3_53l6s"]
[ext_resource type="Script" path="res://scenes/rooms/answer_timer_display.gd" id="3_lwwax"]
[ext_resource type="FontFile" uid="uid://v6181cypux71" path="res://assets/STRIVE_IMPACT.OTF" id="4_cyexs"]
[ext_resource type="Texture2D" uid="uid://dnh0ejkyl5dv4" path="res://assets/answer_room_angle_r.png" id="5_4enes"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gfeir"]
bg_color = Color(0.834463, 0.318082, 0.422151, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aef7r"]
bg_color = Color(0.949245, 0.318486, 0.506074, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l2mhk"]
bg_color = Color(1, 0.402374, 0.509858, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_meuvb"]
bg_color = Color(0.961067, 0.613805, 0.639916, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q31nx"]
bg_color = Color(0.834463, 0.318082, 0.422151, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1gjex"]
bg_color = Color(0.94902, 0.317647, 0.505882, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uogv3"]
bg_color = Color(1, 0.403922, 0.509804, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="AnswerDisplay" type="ColorRect"]
z_index = 20
z_as_relative = false
offset_right = 1675.0
offset_bottom = 1004.0
color = Color(1, 0.767415, 0.768771, 1)
script = ExtResource("1_6spgj")
metadata/_edit_lock_ = true

[node name="DodomeTextureRect" type="TextureRect" parent="."]
z_index = 5
layout_mode = 0
offset_left = -54.0
offset_top = -5.0
offset_right = 706.0
offset_bottom = 1004.0
texture = ExtResource("3_53l6s")
stretch_mode = 4
metadata/_edit_lock_ = true

[node name="ShowAnswerButton" type="Button" parent="."]
z_index = 8
layout_mode = 0
offset_left = 57.0
offset_top = 774.0
offset_right = 1361.0
offset_bottom = 990.0
theme = ExtResource("1_la7yq")
theme_override_colors/font_color = Color(1, 1, 0.937255, 1)
theme_override_font_sizes/font_size = 150
theme_override_styles/disabled = SubResource("StyleBoxFlat_gfeir")
theme_override_styles/hover = SubResource("StyleBoxFlat_aef7r")
theme_override_styles/normal = SubResource("StyleBoxFlat_l2mhk")
text = "REVEAL ANSWER"

[node name="ColorRect" type="Panel" parent="."]
z_index = 7
layout_mode = 0
offset_left = 552.0
offset_top = 132.0
offset_right = 1643.0
offset_bottom = 753.0
theme_override_styles/panel = SubResource("StyleBoxFlat_meuvb")

[node name="AnswerLabel" type="Label" parent="."]
z_index = 20
layout_mode = 0
offset_left = 591.0
offset_top = 541.0
offset_right = 1071.0
offset_bottom = 722.0
theme = ExtResource("1_la7yq")
theme_override_font_sizes/font_size = 40
autowrap_mode = 2

[node name="QuestionLabel" type="Label" parent="."]
z_index = 20
layout_mode = 0
offset_left = 598.0
offset_top = 163.0
offset_right = 1051.0
offset_bottom = 541.0
theme = ExtResource("1_la7yq")
theme_override_font_sizes/font_size = 50
autowrap_mode = 2

[node name="QuestionPictureTextureRect" type="TextureRect" parent="."]
z_index = 7
layout_mode = 0
offset_left = 1088.0
offset_top = 181.0
offset_right = 1563.0
offset_bottom = 656.0

[node name="ExitButton" type="Button" parent="."]
z_index = 8
layout_mode = 0
offset_left = 1397.0
offset_top = 774.0
offset_right = 1625.0
offset_bottom = 989.0
theme = ExtResource("1_la7yq")
theme_override_colors/font_color = Color(1, 0.9835, 0.91, 1)
theme_override_fonts/font = ExtResource("4_cyexs")
theme_override_font_sizes/font_size = 170
theme_override_styles/disabled = SubResource("StyleBoxFlat_q31nx")
theme_override_styles/hover = SubResource("StyleBoxFlat_1gjex")
theme_override_styles/normal = SubResource("StyleBoxFlat_uogv3")
text = "X"

[node name="AnswerTimerDisplay" type="ColorRect" parent="."]
z_index = 8
layout_mode = 0
offset_left = 1280.0
offset_top = 21.0
offset_right = 1643.0
offset_bottom = 95.0
color = Color(0.34, 0.277667, 0.2652, 1)
script = ExtResource("3_lwwax")

[node name="AnswerTimer" type="Timer" parent="AnswerTimerDisplay"]
one_shot = true

[node name="QuizRoomAngleRight" type="Sprite2D" parent="."]
modulate = Color(1, 0.867422, 0.868209, 1)
z_index = 4
position = Vector2(1155, 502.75)
scale = Vector2(0.703653, 0.927315)
texture = ExtResource("5_4enes")
metadata/_edit_lock_ = true
